--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           terraform_wrapper: false
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-1
+
       - name: install vars
         run: ./import_vars.sh --secretName=test_by_mango
         working-directory: ${{ env.working-directory }}
