chore: add a push action

--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -1,6 +1,9 @@
 name: terraform-plan
 
 on:
+  push:
+    paths:
+      - 'terraform/network/**'
   pull_request:
     paths: 
       - 'terraform/network/**'
