--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -29,7 +29,7 @@ jobs:
           aws-region: us-west-1
 
       - name: install vars
-        run: chmod +x ./import_vars.sh && ./import_vars.sh --secretName=test_by_mango
+        run: chmod +x ./import_vars.sh && ./import_vars.sh --secretName=test_by_mango --env=dev
         working-directory: ${{ env.working-directory }}
 
       - name: init
