--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
+          aws-region: ap-northeast-2
 
       - name: install vars
         run: chmod +x ./import_vars.sh && ./import_vars.sh test_by_mango dev
