--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -48,6 +48,7 @@ jobs:
       - uses: ahmadnassri/action-terraform-report@v3
         with:
           # tell the action the plan outputs
-          terraform-text: ${{ github.workspace }}/${{ env.working-directory }}/terraform.text
-          terraform-json: ${{ github.workspace }}/${{ env.working-directory }}/terraform.json
+          terraform-text: ./terraform.text
+          terraform-json: ./terraform.json
           remove-stale-reports: true
+        working-directory: ${{ env.working-directory }}
