--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -1,9 +1,6 @@
 name: terraform-plan
 
 on:
-  push:
-    paths:
-      - 'terraform/network/**'
   pull_request:
     paths: 
       - 'terraform/network/**'
@@ -11,6 +8,7 @@ on:
 jobs:
   terraform-plan:
     env:
+      working-directory-path: terraform/network
       working-directory: ./terraform/network
     runs-on: ubuntu-latest
 
@@ -50,7 +48,7 @@ jobs:
 
       - uses: ahmadnassri/action-terraform-report@v3
         with:
-          terraform-text: ./terraform.text
-          terraform-json: ./terraform.json
+          # tell the action the plan outputs
+          terraform-text: ${{ github.workspace }}/${{ env.working-directory-path }}/terraform.text
+          terraform-json: ${{ github.workspace }}/${{ env.working-directory-path }}/terraform.json
           remove-stale-reports: true
-        working-directory: ${{ env.working-directory }}
