--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -5,6 +5,10 @@ on:
     paths: 
       - 'terraform/network/**'
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   terraform-plan:
     env:
