--- a/.github/workflows/pr-network.yml
+++ b/.github/workflows/pr-network.yml
@@ -12,7 +12,6 @@ permissions:
 jobs:
   terraform-plan:
     env:
-      working-directory-path: terraform/network
       working-directory: ./terraform/network
     runs-on: ubuntu-latest
 
@@ -53,6 +52,6 @@ jobs:
       - uses: ahmadnassri/action-terraform-report@v3
         with:
           # tell the action the plan outputs
-          terraform-text: ${{ github.workspace }}/${{ env.working-directory-path }}/terraform.text
-          terraform-json: ${{ github.workspace }}/${{ env.working-directory-path }}/terraform.json
+          terraform-text: ${{ github.workspace }}${{ env.working-directory }}/terraform.text
+          terraform-json: ${{ github.workspace }}${{ env.working-directory }}/terraform.json
           remove-stale-reports: true
