--- a/.github/workflows/push-network.yml
+++ b/.github/workflows/push-network.yml
@@ -14,7 +14,7 @@ jobs:
   terraform-apply:
     env:
       working-directory: ./terraform/network
-      branch: ${{ github.head_ref }}
+      branch: ${{ github.base_ref }}
     runs-on: ubuntu-latest
 
     steps:
