chore: apply json test

--- a/.github/workflows/push-network.yml
+++ b/.github/workflows/push-network.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: ${{ env.working-directory }}
 
       - name: apply
-        run: terraform apply -auto-approve -lock=false -out terraform.apply -var-file=${{ env.branch }}.json
+        run: terraform apply -auto-approve -lock=false -json terraform.apply -var-file=${{ env.branch }}.json
         working-directory: ${{ env.working-directory }}
 
       - name: generate plain output
