--- a/.github/workflows/push-network.yml
+++ b/.github/workflows/push-network.yml
@@ -69,6 +69,7 @@ jobs:
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
         with:
+          # For posting a rich message using Block Kit
           payload: |
             {
               "blocks": [
@@ -76,7 +77,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "test"
+                    "text": "bar"
                   }
                 }
               ],
@@ -88,7 +89,7 @@ jobs:
                       "type": "section",
                       "text": {
                         "type": "mrkdwn",
-                        "text": "test"
+                        "text": "foo"
                       }
                     }
                   ]
@@ -97,3 +98,4 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
