chore: planning message test

--- a/.github/workflows/push-network.yml
+++ b/.github/workflows/push-network.yml
@@ -83,7 +83,7 @@ jobs:
               ],
               "attachments": [
                 {
-                  "color": "#FF0000",
+                  "color": "#2EB67D",
                   "blocks": [
                     {
                       "type": "section",
