--- a/.github/workflows/merged-network.yml
+++ b/.github/workflows/merged-network.yml
@@ -11,6 +11,8 @@ permissions:
 
 jobs:
   notify_merged_pull_request:
+    runs-on: ubuntu-latest
+
     steps:
       - name: Tell the action the pr merged outputs
         id: slack
