chore: add private subnets

--- a/.github/workflows/merged-network.yml
+++ b/.github/workflows/merged-network.yml
@@ -31,6 +31,7 @@ jobs:
               ],
               "attachments": [
                 {
+                  "color": "#2EB67D",
                   "blocks": [
                     {
                       "type": "section",
