--- a/.github/workflows/merged-network.yml
+++ b/.github/workflows/merged-network.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   notify_merged_pull_request:
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == true }}
 
     steps:
       - name: Tell the action the pr merged outputs
