--- a/.github/workflows/merged-network.yml
+++ b/.github/workflows/merged-network.yml
@@ -10,7 +10,42 @@ permissions:
   pull-requests: write
 
 jobs:
+  terraform-apply:
+    env:
+      working-directory: ./terraform/network
+      branch: ${{ github.event.pull_request.base.ref }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: unfor19/install-aws-cli-action@master
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_wrapper: false
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: install vars
+        run: chmod +x ./import_vars.sh && ./import_vars.sh test_by_mango ${{ env.branch }}
+        working-directory: ${{ env.working-directory }}
+
+      - name: init
+        run: terraform init
+        working-directory: ${{ env.working-directory }}
+
+      - name: apply
+        id: apply
+        run: terraform apply -auto-approve -lock=false -var-file=${{ env.branch }}.json
+        working-directory: ${{ env.working-directory }}
+
   notify_merged_pull_request:
+    env:
+      branch: ${{ github.event.pull_request.base.ref }}
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.merged == true }}
 
@@ -26,7 +61,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "Merge test"
+                    "text": "${{ env.branch }} Infrastructure Deploy Success"
                   }
                 }
               ],
@@ -45,7 +80,7 @@ jobs:
                       "type": "section",
                       "text": {
                         "type": "mrkdwn",
-                        "text": "*Pull Request by :* ${{ github.event.pull_request.user.login }}n*Merged at:* ${{ github.event.pull_request.merged_at }}"
+                        "text": "*Pull Request by :* ${{ github.event.pull_request.user.login }}"
                       }
                     },
                     {
